--- a/app/src/main/res/menu/item_menu_save.xml
+++ b/app/src/main/res/menu/item_menu_save.xml
@@ -5,5 +5,9 @@
         android:id="@+id/menu_save"
         android:title="@string/menu_item_save"
         android:icon="@drawable/ic_save"/>
+    <item
+        android:id="@+id/menu_share"
+        android:title="@string/menu_item_share"
+        android:icon="@drawable/ic_share"/>
 
 </menu>
